--- a/server/model-config.json
+++ b/server/model-config.json
@@ -14,7 +14,8 @@
     ]
   },
   "User": {
-    "dataSource": "db"
+    "dataSource": "db",
+    "public": false
   },
   "AccessToken": {
     "dataSource": "db",
@@ -36,6 +37,34 @@
     "public": false
   },
   "Topic": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Neighbor": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Administrator": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Neighborhood": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Issue": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Category": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Board": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Proposal": {
     "dataSource": "db",
     "public": true
   }
