--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "lint": "eslint .",
     "start": "node .",
-    "posttest": "npm run lint"
+    "posttest": "npm run lint",
+    "devserver": "./node_modules/nodemon/bin/nodemon.js index.js"
   },
   "dependencies": {
     "compression": "^1.0.3",
@@ -24,7 +25,8 @@
   },
   "devDependencies": {
     "eslint": "^3.17.1",
-    "eslint-config-loopback": "^8.0.0"
+    "eslint-config-loopback": "^8.0.0",
+    "nodemon": "^1.18.4"
   },
   "repository": {
     "type": "",
