--- a/server/model-config.json
+++ b/server/model-config.json
@@ -46,7 +46,7 @@
   },
   "Administrator": {
     "dataSource": "db",
-    "public": true
+    "public": false
   },
   "Neighborhood": {
     "dataSource": "db",
@@ -65,6 +65,10 @@
     "public": true
   },
   "Proposal": {
+    "dataSource": "db",
+    "public": true
+  },
+  "Vote": {
     "dataSource": "db",
     "public": true
   }
