--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "loopback": "^3.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
+    "loopback-component-storage-mongo": "^1.5.1",
     "loopback-connector-mongodb": "^3.8.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
