--- a/server/model-config.json
+++ b/server/model-config.json
@@ -43,8 +43,8 @@
       "remoting": {
         "sharedMethods": {
           "*": false,
-          "create":true,
-          "findById":true,
+          "create": true,
+          "findById": true,
           "deleteById": true,
           "find": true,
           "prototype.patchAttributes": true,
@@ -65,8 +65,8 @@
       "remoting": {
         "sharedMethods": {
           "*": false,
-          "create":true,
-          "findById":true,
+          "create": true,
+          "findById": true,
           "deleteById": true,
           "find": true,
           "prototype.patchAttributes": true,
@@ -86,8 +86,8 @@
       "remoting": {
         "sharedMethods": {
           "*": false,
-          "create":true,
-          "findById":true,
+          "create": true,
+          "findById": true,
           "deleteById": true,
           "find": true,
           "prototype.patchAttributes": true,
@@ -103,8 +103,8 @@
       "remoting": {
         "sharedMethods": {
           "*": false,
-          "create":true,
-          "findById":true,
+          "create": true,
+          "findById": true,
           "deleteById": true,
           "find": true,
           "prototype.patchAttributes": true,
@@ -120,8 +120,8 @@
       "remoting": {
         "sharedMethods": {
           "*": false,
-          "create":true,
-          "findById":true,
+          "create": true,
+          "findById": true,
           "deleteById": true,
           "find": true,
           "prototype.patchAttributes": true,
@@ -137,8 +137,8 @@
       "remoting": {
         "sharedMethods": {
           "*": false,
-          "create":true,
-          "findById":true,
+          "create": true,
+          "findById": true,
           "deleteById": true,
           "find": true,
           "prototype.patchAttributes": true,
@@ -158,8 +158,25 @@
       "remoting": {
         "sharedMethods": {
           "*": false,
-          "create":true,
-          "findById":true,
+          "create": true,
+          "findById": true,
+          "deleteById": true,
+          "find": true,
+          "prototype.patchAttributes": true,
+          "count": true
+        }
+      }
+    }
+  },
+  "Notice": {
+    "dataSource": "db",
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "*": false,
+          "create": true,
+          "findById": true,
           "deleteById": true,
           "find": true,
           "prototype.patchAttributes": true,
