--- a/server/model-config.json
+++ b/server/model-config.json
@@ -38,27 +38,117 @@
   },
   "Neighbor": {
     "dataSource": "db",
-    "public": true
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "*": false,
+          "create": true,
+          "findById": true,
+          "deleteById": true,
+          "find": true,
+          "prototype.patchAttributes": true,
+          "vote": true,
+          "cancelRequest": true,
+          "request": true,
+          "count": true,
+          "login": true,
+          "logout": true,
+          "prototype.__get__accessTokens": true,
+          "prototype.__findById__accessTokens": true
+        }
+      }
+    }
   },
   "Neighborhood": {
     "dataSource": "db",
-    "public": true
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "*": false,
+          "create": true,
+          "findById": true,
+          "deleteById": true,
+          "find": true,
+          "prototype.patchAttributes": true,
+          "addNeighbor": true,
+          "kickNeighbor": true,
+          "makeRepresentative": true,
+          "ceaseRepresentative": true,
+          "count": true
+        }
+      }
+    }
   },
   "Category": {
     "dataSource": "db",
-    "public": true
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "*": false,
+          "create": true,
+          "findById": true,
+          "deleteById": true,
+          "find": true,
+          "prototype.patchAttributes": true,
+          "count": true
+        }
+      }
+    }
   },
   "Proposal": {
     "dataSource": "db",
-    "public": true
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "*": false,
+          "create": true,
+          "findById": true,
+          "deleteById": true,
+          "find": true,
+          "prototype.patchAttributes": true,
+          "count": true,
+          "unvote": true
+        }
+      }
+    }
   },
   "Vote": {
     "dataSource": "db",
-    "public": true
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "*": false,
+          "create": true,
+          "findById": true,
+          "deleteById": true,
+          "find": true,
+          "prototype.patchAttributes": true,
+          "count": true
+        }
+      }
+    }
   },
   "Expense": {
     "dataSource": "db",
-    "public": true
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "*": false,
+          "create": true,
+          "findById": true,
+          "deleteById": true,
+          "find": true,
+          "prototype.patchAttributes": true,
+          "count": true
+        }
+      }
+    }
   },
   "Container": {
     "dataSource": "filestore-mongo",
@@ -66,6 +156,36 @@
   },
   "Request": {
     "dataSource": "db",
-    "public": true
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "*": false,
+          "create": true,
+          "findById": true,
+          "deleteById": true,
+          "find": true,
+          "prototype.patchAttributes": true,
+          "count": true
+        }
+      }
+    }
+  },
+  "Notice": {
+    "dataSource": "db",
+    "public": true,
+    "options": {
+      "remoting": {
+        "sharedMethods": {
+          "*": false,
+          "create": true,
+          "findById": true,
+          "deleteById": true,
+          "find": true,
+          "prototype.patchAttributes": true,
+          "count": true
+        }
+      }
+    }
   }
 }
